Fix attempt for hero section on mobile viewports

--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -357,14 +357,13 @@ h3 {
 
 @media (max-width: 425px) {
   .hero {
-    height: 92.5vh;
+    min-height: 100vh;
   }
 
   .hero-content {
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
